# durst

./: .gitignore  Cargo.toml  README.md  config.yml  rustfmt.toml
.github/workflows/: rust.yml
durst/: Cargo.toml  build.rs  interface.xml
durst/src/: cli.rs  config.rs  main.rs  notification.rs  test.rs
durstctl/: Cargo.toml
