[package]
name = "durst"
version = "0.1.0"
authors = ["Felix Buehler <account@buehler.rocks>"]
edition = "2018"
repository = "https://github.com/durst-notification/durst"
homepage = "https://durst-notification.org"
description = "dunst written in Rust"
include = [
    "**/*.rs",
    "Cargo.toml",
]
readme = "README.md"

[dependencies]
cairo-rs = "0.8"
clap = {version = "2.33", features = ["yaml"]}
dbus = "0.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
env_logger = "0.7"

[build-dependencies]
dbus-codegen = "0.5"
clap = "2.33"
